SERVER-46674 Compare WriteConcernOptions properly (without converting to BSON)