src/mongo/db/service_entry_point_common.cpp
@@ -814,11 +814,16 @@ bool runCommandImpl(OperationContext* opCtx,
 
         // With the exception of getMores inheriting the WriteConcern from the originating command,
         // nothing in run() should change the writeConcern.
-        dassert(command->getLogicalOp() == LogicalOp::opGetMore
-                    ? !extractedWriteConcern
-                    : (extractedWriteConcern &&
-                       SimpleBSONObjComparator::kInstance.evaluate(
-                           opCtx->getWriteConcern().toBSON() == extractedWriteConcern->toBSON())));
+        if (command->getLogicalOp() == LogicalOp::opGetMore) {
+            dassert(!extractedWriteConcern,
+                    "opGetMore contained unexpected extracted write concern");
+        } else {
+            dassert(extractedWriteConcern, "no extracted write concern");
+            dassert(opCtx->getWriteConcern() == extractedWriteConcern,
+                    "opCtx wc: {} extracted wc: {}"_format(
+                        opCtx->getWriteConcern().toBSON().jsonString(),
+                        extractedWriteConcern->toBSON().jsonString()));
+        }
     } else {
         behaviors.uassertCommandDoesNotSpecifyWriteConcern(request.body);
         if (shouldCheckOutSession) {
